fixes glitch at end of reset animation on safari

--- a/client/app/main.scss
+++ b/client/app/main.scss
@@ -34,7 +34,7 @@ body {
 
 .game-pad {
   position: absolute;
-  bottom: 0;
+  bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
   padding: 20px 10px 10px 10px;
